[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "quantum-pulse"
version     = "1.0.0"
description = "Extreme-density data vault engine for LLM training sets"
readme      = "README.md"
requires-python = ">=3.12"
license     = { text = "MIT" }
authors     = [{ name = "Naveenub", url = "https://github.com/Naveenub" }]

[project.urls]
Homepage      = "https://github.com/Naveenub/quantum-pulse"
Repository    = "https://github.com/Naveenub/quantum-pulse"
Documentation = "https://github.com/Naveenub/quantum-pulse#readme"
"Bug Tracker" = "https://github.com/Naveenub/quantum-pulse/issues"

keywords = ["compression", "encryption", "vault", "llm", "zstd", "aes"]

dependencies = [
    "msgpack>=1.0.8",
    "zstandard>=0.22.0",
    "cryptography>=42.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiofiles>=23.2.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.1",
    "motor>=3.4.0",
    "pymongo>=4.7.0",
    "loguru>=0.7.2",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.3.0",
    "apscheduler>=3.10.4",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
qp = "cli:app"

# ── pytest ────────────────────────────────────────────────────────────────── #

[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["tests"]
addopts         = "-v --tb=short --cov=core --cov=models --cov-report=term-missing"
filterwarnings  = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── ruff (linter + formatter) ─────────────────────────────────────────────── #

[tool.ruff]
target-version = "py312"
line-length    = 100

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["core", "models"]

# ── mypy ──────────────────────────────────────────────────────────────────── #

[tool.mypy]
python_version         = "3.12"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_configs    = true
exclude                = ["tests/"]

# ── coverage ──────────────────────────────────────────────────────────────── #

[tool.coverage.run]
source   = ["core", "models"]
omit     = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 60
